--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com/"></script>
+    <meta name="title" content="CDN for MacX"/>
+    <meta name="description" content="A Content Delivery Network (CDN) is a distributed network of servers
+    strategically located around the world to provide faster and more
+    reliable delivery of digital content, such as images, videos, and
+    other web assets. When a user requests a piece of content, the CDN
+    selects the server that is closest to the user to deliver the
+    content, reducing latency and improving the user experience. CDNs
+    can also handle heavy traffic loads and distribute the load among
+    multiple servers, ensuring that the website stays up and running
+    even during peak traffic periods. CDNs are essential for modern web
+    applications that require fast, reliable, and scalable delivery of
+    content to users around the world."/>
     <title>MacX CDN</title>
   </head>
   <body class="text-gray-400 bg-gray-900 body-font" style="overflow-y:hidden; min-height: 100vh; display:flex; user-select:none; flex-direction:column">
@@ -33,7 +45,7 @@
 <br/><br/>
             To save my time creating this, I used tailwind css and tailblocks.cc and to keep it a bit different, used some JS
             <pre  
-onClick="javascript:count=0;document.getElementById('spoilerText').innerHTML='PS - If you\'re bored, keep clicking the button LOL.'"            style="
+onClick="javascript:document.getElementById('spoilerText').innerHTML='PS - If you\'re bored, keep clicking the button LOL.'"            style="
             background-color: #202225;
             line-height: 13px;
             padding-top: 3px;
